[package]
name = "tofuboi"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13" }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
ytranscript = "0.1.0"
html-escape = "0.2.13"
dptree = "0.3"
reqwest = { version = "0.11", features = ["multipart"] }

[dev-dependencies]
teloxide_tests = "0.2.0"
mockito = "0.31"
